src/testData/analysis/escapes/unicodeEscapes.cr
'<error descr="Invalid Unicode codepoint">\u</error>'

'<error descr="Invalid Unicode codepoint">\uA</error>'

'<error descr="Invalid Unicode codepoint">\uAB</error>'

'<error descr="Invalid Unicode codepoint">\uAB1</error>'

'\uAB12'

'\uaBc5'

'<error descr="Invalid Unicode codepoint (surrogate half)">\uDABC</error>'

'\uEEEE'

"<error descr="Invalid Unicode codepoint">\u</error>"

"<error descr="Invalid Unicode codepoint">\u</error>x"

"<error descr="Invalid Unicode codepoint">\uA</error>"

"<error descr="Invalid Unicode codepoint">\uA</error>x"

"<error descr="Invalid Unicode codepoint">\uAB</error>"

"<error descr="Invalid Unicode codepoint">\uAB</error>x"

"<error descr="Invalid Unicode codepoint">\uAB1</error>"

"<error descr="Invalid Unicode codepoint">\uAB1</error>x"

"\uAB12"

"\uAB12x"

"\uaBc5"

"<error descr="Invalid Unicode codepoint (surrogate half)">\uDABC</error>"

"\uEEEE"